<!DOCTYPE resources
    [
        <!ENTITY appname "Tempo Tune">
        <!ENTITY year "2020">
        <!ENTITY email "tempotune@protonmail.com">
        ]
    >

<resources>
    <string name="app_name">&appname;</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="real_banner_ad_unit_id">ca-app-pub-5040365596623384/1962389527</string>

    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="real_interstitial_ad_unit_id">ca-app-pub-5040365596623384/8040357490</string>
    <string name="test_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="bpm_header">BPM</string>
    <string name="pitch_header">Pitch</string>
    <string name="add_pitch_button_text">Add</string>
    <string name="remove_pitch_button_text">Remove</string>

    <string name="max_notes">Maximum number of notes exceeded</string>

    <string name="download_prompt">Download module "%s"?</string>
    <string name="download_ongoing">Module "%s" is currently awaiting installation...</string>
    <string name="download_progress">Downloading module %s (%d / %d MB)</string>
    <string name="download_initiating">Initiating download of module %s...</string>
    <string name="download_finished">"Finished downloading module %s"</string>

    <string name="download_network_fail">Failed to connect to the Google Play server. Please
        establish a network connection.</string>
    <string name="download_rejected_retrying">Download rejected by the server. Trying again in %d
        seconds...</string>
    <string name="download_restart">Restarting download of module %s...</string>
    <string name="download_insufficient_storage">Insufficient storage. Please free up space on your
        device.</string>
    <string name="download_api_level_fail">We\'re sorry, but downloading modules is not supported on
        this version of Android. Please upgrade to at least Android version 5.0.</string>
    <string name="download_api_unavailable">Downloading modules is not supported on this version of
        the app. Is this a development build or emulated device?</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>

    <string name="premium_prompt_full">Please consider upgrading to premium mode. This will allow
        you to\n
    \t&#8226; Download new sounds.\n
    \t&#8226; Play chords.\n
    \t&#8226; Support development of the app.</string>
    <string name="premium_prompt_download">Downloading new sounds is a premium feature. Upgrade to
    premium mode?</string>
    <string name="upgrade">UPGRADE</string>
    <string name="not_now">NOT NOW</string>

    <string name="instant_change_sounds">Please install the full version of the app to access
        additional instruments.</string>

    <string name="google_play_failure">Failed to connect to the Google Play service.</string>
    <string name="network_failure">Failed to connect to the network service.</string>
    <string name="unexpected_error">Unexpected error.</string>
    <string name="failed_to_find_product">Failed to find the product: %s</string>

    <string name="install_started">"Installing module %s..."</string>
    <string name="install_finished">"Finished installing module %s"</string>
    <string name="install_fatal_error">We\'re sorry, but there was an unanticipated error installing
        the module %s. Please contact the app developers to troubleshoot this issue.\n\nDetails:\n%s
    </string>
    <string name="install_canceling">Cancelling installation for module %s...</string>
    <string name="install_canceled">Canceled installation for module %s</string>
    <string name="install_confirmation_failed">Received exception when attempting install
        confirmation: %s</string>
    <string name="install_failed">Installation failed for module %s. Please retry the installation.
    </string>
    <string name="install_pending">Installation pending for module %s...</string>
    <string name="install_unknown">Unknown install status for module %s</string>
    <string name="install_status_unrecognized">Unrecognized install status for module %s. Status: %d
    </string>
    <string name="install_trouleshooting">Installation failed for module %s.\n
        \n
        Reason:\n
        %s\n
        \n
        Please see https://support.google.com/googleplay/answer/7513003 for troubleshooting advice.
    </string>

    <string name="query_purchases_fail">Failed to query existing purchases.\n\nReason:\n%s\n
        \nPremium features are unavailable. We apologize for the inconvenience.</string>
    <string name="acknowledge_fail">Failed to acknowledge product %s\n\nReason:\n%s\n\nYour
        purchase will be refunded if acknowledgment does not succeed within three days.</string>
    <string name="sku_fail">Failed to retrieve details for product %s\n\nReason:\n%s</string>
    <string name="purchase_pending">Purchase %s is still pending. Please complete the purchase to
        unlock the new content.</string>
    <string name="purchase_fail">Failed to purchase product %s\n\nReason:\n%s</string>
    <string name="billing_flow_fail">Failed to start the billing flow. Reason:\n%s</string>
    <string name="purchase_invalid_signature">A purchase of premium mode was found, but we failed to
        verify its signature. Premium mode will be disabled. Please contact the app developers to
        troubleshoot this issue.</string>

    <string name="instrument_header">Instrument</string>
    <string name="duration_header">Duration</string>
    <string name="velocity_header">Volume</string>
    <string name="credits">
        \n &appname;™ version %s\n\n
        &lt;p>Copyright © 2019-&year; Blaine Rister, all rights reserved. Please direct questions to
        &lt;a href="mailto:&email;">&email;&lt;/a>.&lt;/p>

        &lt;p>Thanks to the developers of
        &lt;a href="http://www.fluidsynth.org/" tile="FluidSynth">FluidSynth&lt;/a>, on which the sound
        synthesis is based.&lt;/p>

        &lt;p>Thanks to the following authors from
        &lt;a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com&lt;/a> for some of the
        icons in this app:&lt;/p>
        \t&lt;a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik&lt;/a>
        \t&lt;a href="https://www.flaticon.com/authors/xnimrodx" title="Xnimrodx">Xnimrodx&lt;/a>
        \t&lt;a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp&lt;/a>
        \t&lt;a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons&lt;/a>
    </string>
    <string name="title_coresounds">Core Sounds</string>

    <string name="title_instantsounds">Instant Sounds</string>
    <string name="title_stringsounds">String Sounds</string>
    <string name="title_brasssounds">Brass Sounds</string>
    <string name="title_exoticsounds">Exotic Sounds</string>
    <string name="title_synthsounds">Synth Sounds</string>
    <string name="title_guitarsounds">Guitar Sounds</string>
    <string name="title_keyboardsounds">Keyboard Sounds</string>
    <string name="title_metronomesounds">Metronome Sounds</string>
    <string name="title_basssounds">Bass Sounds</string>
    <string name="title_organsounds">Organ Sounds</string>
    <string name="title_percussionsounds">Percussion Sounds</string>
    <string name="title_woodwindsounds">Woodwind Sounds</string>
    <string-array name="pitches_sharp_array">
        <item>A</item>
        <item>A#</item>
        <item>B</item>
        <item>C</item>
        <item>C#</item>
        <item>D</item>
        <item>D#</item>
        <item>E</item>
        <item>F</item>
        <item>F#</item>
        <item>G</item>
        <item>G#</item>
    </string-array>
    <string-array name="pitches_flat_array">
        <item>A</item>
        <item>Bb</item>
        <item>B</item>
        <item>C</item>
        <item>Db</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>Gb</item>
        <item>G</item>
        <item>Ab</item>
    </string-array>

    <string name="playPauseContentDescription">Play or pause sound.</string>
    <string name="tapperContentDescription">Tap the desired tempo.</string>
    <string name="reverbContentDescription">Change the reverberation level.</string>
    <string name="plusContentDescription">Increase the tempo.</string>
    <string name="minusContentDescription">Decrease the tempo.</string>
    <string name="sharpsContentDescription">Toggle flats or sharps.</string>
    <string name="durationContentDescription">Change the note duration.</string>
    <string name="volumeContentDescription">Change the note volume.</string>

    <string name="public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAisOtaaetqHSZ6u/ZFQwxwf+n7VxovErL3e3id21CrenM8d2OVkpgNTluEpzQCU9fGX0/ZercNmCpQXjiaoJJcd8hGiTjT13vw+ig+Frqbfr4d7uGLcqewT1ttV2R2Y/YuQlejEJEMHCdcFSExRfe9zUkEEwcD25eu6AfhduO673HWN7AzLwDq+fmbo29qrdYgZ5wmb5JpjKktge+6BmRqskOfRQUBdyd8GQn9PLpKqoCDxefFxcCe5IDDH4X19FiGsArKJary6MUpESK17Y5lK11/1hUed6jfhl23X/NJ/SjruFRTN7qvaK7OM0Yy8EwRqvJleDW1VNz8kIH2ouZqwIDAQAB</string>
</resources>
