<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration_header"
        style="@style/AppTheme.sectionTitleTextStyle" />

    <SeekBar
        android:id="@+id/durationSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/seekbar_padding"
        android:paddingBottom="@dimen/seekbar_padding"
        android:contentDescription="@string/durationContentDescription" />

    <TextView
        android:id="@+id/velocityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/velocity_header"
        style="@style/AppTheme.sectionTitleTextStyle" />

    <SeekBar
        android:id="@+id/velocitySeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/seekbar_padding"
        android:paddingBottom="@dimen/seekbar_padding"
        android:contentDescription="@string/volumeContentDescription" />

</LinearLayout>